[package]
name = "anchor_todo"
version = "0.1.0"
description = "Created by ibuidl"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_todo"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
